first echange of the first question and the first answer - write lie or true resp - and choose a good answer in lies

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ dist
 node_modules
 .idea
 npm-debug.log
+package-lock.json
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
