--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "http": "0.0.0",
+    "logger": "0.0.1",
     "rxjs": "^5.5.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
